<?xml version="1.0"?>
<package>
  <name>pfebreakbot</name>
  <version>0.1.0</version>
  <description>pfebreakbot package</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>LGPL</license>
  <url type="website">https://github.com/pfebreakbot/</url>
  <author email="you@yourdomain.tld">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
